[package]
name = "micro-blogging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
serde = {version="1.0.166", features=["derive"]}
serde_json = "1.0.100"
env_logger = "0.10.0"
uuid = {version="1.4.0", features=["serde", "v4"]}
chrono = {version="0.4.26", features=["serde"]}
diesel = {version="2.1.0", features=["postgres", "r2d2", "uuid", "chrono"]}
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
regex = "1.9.3"
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
base64 = "0.21.2"
